# regulated-conversational-ai-mlops

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  kind-e2e.yml
deploy/k8s/base/gateway/: analysis-template.yaml  canary-prober-job.yaml  kustomization.yaml  rollout.yaml  scaledobject.yaml  service.yaml
deploy/k8s/base/model-serving/: deployment.yaml  kustomization.yaml  scaledobject.yaml  service.yaml
deploy/k8s/base/observability/: grafana-dashboard.json  kustomization.yaml  otel-collector.yaml
deploy/k8s/base/provider-stub/: deployment.yaml  service.yaml  (+1 more)
deploy/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
deploy/terraform/envs/: local.tfvars  prod.tfvars
docs/: architecture-and-tradeoffs.md
evals/: Dockerfile  pyproject.toml
evals/cases/: deterministic.yaml  judged.yaml
evals/src/eval_harness/: aggregate.py  assertions.py  gate.py  judge.py  runner.py
evals/tests/: test_aggregate.py  test_assertions.py  test_gate.py  test_judge.py  test_runner.py
prompts/: README.md
prompts/customer-support/: v1.0.0.yaml
scripts/: bootstrap-local.sh  deploy-local.sh  publish-test-event.sh  seed-aws.sh  smoke-stream-drain.sh
services/gateway/: Dockerfile  pyproject.toml
services/gateway/config/: prices.yaml
services/gateway/src/gateway/: config.py  draining.py  main.py
services/gateway/src/gateway/api/: chat.py  health.py  stream.py
services/gateway/src/gateway/observability/: metrics.py  scrubber.py  tracing.py
services/gateway/src/gateway/prompts/: loader.py
services/gateway/src/gateway/providers/: base.py  bedrock.py  errors.py  openai_compat.py  retry.py
services/gateway/tests/: test_app.py  test_bedrock.py  test_config.py  test_draining.py  test_errors.py  test_make_provider.py  test_metrics.py  test_openai_compat.py  test_prompt_loader.py  test_retry.py  test_scrubber.py
services/provider-stub/: Dockerfile  pyproject.toml
services/provider-stub/src/provider_stub/: faults.py  main.py  responses.py
services/provider-stub/tests/: test_faults.py  test_responses.py  test_stub_app.py
services/ticket-worker/: Dockerfile  pyproject.toml
services/ticket-worker/src/ticket_worker/: consumer.py  idempotency.py  main.py  ticket.py
services/ticket-worker/tests/: test_worker.py
tests/: test_e2e_smoke.py  test_scaffold_imports.py
(+28 files in other folders)
