[project]
name = "evals"
version = "0.1.0"
description = "Eval harness and case schemas — the blocking CI quality gate"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "httpx",
    "pyyaml",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_harness"]
