[project]
name = "provider-stub"
version = "0.1.0"
description = "Deterministic OpenAI-compatible provider stub with runtime fault injection"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_stub"]
