[project]
name = "ticket-worker"
version = "0.1.0"
description = "SQS-driven ticket-drafting worker with DynamoDB idempotency"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "pydantic",
    "pyyaml",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_worker"]
